Fix T45016, mask animation data lost after layer rename

We need to fix up animation data.